--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "@angular/router": "~8.2.14",
     "@capacitor/core": "1.5.1",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/geolocation": "^5.23.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "@babel/compat-data": "7.8.0",
+    "cordova-plugin-geolocation": "^4.0.2",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
